--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Vladimir Chernev",
   "type": "commonjs",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
     "@playwright/test": "^1.56.1",
