--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {},
   "devDependencies": {
     "@eslint/js": "^9.39.0",
+    "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.00",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
